# glfwtest

./: .gitignore  CMakeLists.txt
gamefiles/shaders/: depth_map.vertex  fragment_shader.glsl  light_fragment.glsl  normals_geometry_shader.glsl  pbr_fragment.glsl  pbr_fragment_mapped.glsl  skybox.vertex  texture_frag_shader.glsl  vertex_shader.glsl
gamefiles/shaders/includes/: pbr.glsl  shadow.glsl
gamefiles/shaders/temp/: fragment_shader.glsl  pbr_fragment.glsl  texture_frag_shader.glsl
gamefiles/shaders/temp/temp/temp/: vertex_shader.glsl
gamefiles/shaders/temp/temp/temp/temp/: screen_quad_fragment.glsl
gamefiles/shaders/temp/temp/temp/temp/includes/: debug.glsl
gamefiles/shaders/temp/temp/temp/temp/temp/: normals_geometry_shader.glsl  pbr_fragment_mapped.glsl  screen_quad_vertex.glsl
includes/: AlternativeObjLoader.h  ColoredTriangle.h  CubeGeometry.h  CubeMapTexture.h  Depthbuffer.h  DepthbufferTexture.h  DirectionalLight.h  DisplayInfo.h  Framebuffer.h  FramebufferTexture.h  GPUTexture2D.h  GameObject.h  Geometry.h  ImageTexture2D.h  IndexedGeometry.h  MappedPBRMaterial.h  Mesh.h  NonIndexedGeometry.h  NonIndexedOBJ.h  OBJGeometry.h  OBJParser.h  OpenGLErrorLogger.h  PBRMaterial.h  PathResolver.h  PerspectiveCamera.h  PointLight.h  Program.h  QuadGeometry.h  Shader.h  SingleValueTexture.h  Texture2D.h  Transform.h  Transformation.h  TriangleGeometry.h  UniformProvider.h
scripts/: preprocess_glsl.py
src/: ImageTexture2D.cpp  Program.cpp  Shader.cpp  main.cpp
